--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -142,7 +142,8 @@ body.terminal {
     padding: 0.25rem;
     color: #4bde00;
     fill: #4bde00;
-    text-decoration: none; }
+    text-decoration: none;
+    font-weight: 700; }
     body.terminal a:hover {
       background-color: #4bde00;
       color: black; }
