--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
     </a>
   {%- endif -%}
   {%- endfor -%}
-  <a class="page-link" href="/james-dewes-cv.pdf">
+  <a class="page-link" href="/assets/downloads/james-dewes-cv.zip">
     <div>
         <p>
           CV
