Solves bug with body links
Stops body links in the terminal theme
displaying in block

--- a/_assets/styles/libs/terminal.scss
+++ b/_assets/styles/libs/terminal.scss
@@ -31,7 +31,7 @@ body.terminal{
         }
     }
     a{
-        display: inline-block;
+        display: inline;
         border: solid 2px  #4bde00;
         padding: 0.25rem;
         color: #4bde00;
