--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -137,7 +137,7 @@ body.terminal {
     body.terminal .site-header .u-h1::before {
       content: 'whoami\A'; }
   body.terminal a {
-    display: inline-block;
+    display: inline;
     border: solid 2px  #4bde00;
     padding: 0.25rem;
     color: #4bde00;
