--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <nav>
   <a class="page-link hidden-desktop" id="navigation" href="#">
-    <div>
-      <p>
-        Navigation
-      </p>
-    </div>
+    <svg viewBox="0 0 100 80" width="40" height="40">
+      <rect width="100" height="20"></rect>
+      <rect y="30" width="100" height="20"></rect>
+      <rect y="60" width="100" height="20"></rect>
+    </svg>
   </a>
 
   {%- for path in page_paths -%}
