--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -138,7 +138,7 @@ body.terminal {
       content: 'whoami\A'; }
   body.terminal a {
     display: inline-block;
-    border: solid 2px  #4bde00;
+    border: solid 2px #4bde00;
     padding: 0.25rem;
     color: #4bde00;
     fill: #4bde00;
@@ -155,13 +155,17 @@ body.terminal {
     body.terminal ul li {
       list-style: none; }
   body.terminal nav {
-    width: calc(90% - 14px);
+    background-color: black;
+    position: absolute;
+    top: 5px;
+    right: 10px;
     margin-bottom: 1rem;
     padding: 1rem 0;
     text-align: center;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    z-index: 99; }
     body.terminal nav a {
       width: 100%;
       padding: 0.5rem;
@@ -169,9 +173,15 @@ body.terminal {
       display: none;
       visibility: hidden; }
       body.terminal nav a.active, body.terminal nav a:first-of-type {
-        display: inline-block;
-        visibility: visible; }
+        display: inline;
+        visibility: visible;
+        position: relative; }
+      body.terminal nav a:first-of-type {
+        width: auto;
+        padding: 0.5rem;
+        margin: 0; }
     body.terminal nav p {
+      width: 100%;
       margin: 0; }
   body.terminal main {
     max-width: calc(90% - 14px); }
@@ -200,20 +210,22 @@ body.terminal {
       flex-wrap: wrap;
       flex-direction: row; }
   @media screen and (min-width: 426px) {
-    body.terminal main {
-      overflow-y: scroll;
-      padding-right: 1rem;
-      width: calc(90% - 14px);
-      height: calc(100vh - 330px); }
-      body.terminal main::-webkit-scrollbar {
-        -webkit-appearance: none;
-        width: 1rem; }
-      body.terminal main::-webkit-scrollbar-thumb {
-        background-color: #4bde00; }
-    body.terminal footer .footer-col-1 {
-      width: calc(20%); }
-    body.terminal footer .footer-col-2 {
-      width: calc(80%); } }
+    body.terminal {
+      margin: 0; }
+      body.terminal main {
+        overflow-y: scroll;
+        padding-right: 1rem;
+        width: calc(90% - 14px);
+        height: calc(100vh - 330px); }
+        body.terminal main::-webkit-scrollbar {
+          -webkit-appearance: none;
+          width: 1rem; }
+        body.terminal main::-webkit-scrollbar-thumb {
+          background-color: #4bde00; }
+      body.terminal footer .footer-col-1 {
+        width: calc(20%); }
+      body.terminal footer .footer-col-2 {
+        width: calc(80%); } }
   @media screen and (min-width: 600px) {
     body.terminal nav {
       width: calc(90% - 14px);
