--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,21 +9,21 @@
 
   {%- for path in page_paths -%}
   {%- assign my_page = site.pages | where: "path", path | first -%}
-  {%- if my_page.title -%}
-    <a class="page-link" href="{{ my_page.url | relative_url }}">
-      <div>
-        <p>
-          {{ my_page.title | escape }}
-        </p>
-      </div>
-    </a>
+  {%- if my_page.title and my_page.title != "Tags" -%}
+  <a class="page-link" href="{{ my_page.url | relative_url }}">
+    <div>
+      <p>
+        {{ my_page.title | escape }}
+      </p>
+    </div>
+  </a>
   {%- endif -%}
   {%- endfor -%}
   <a class="page-link" href="/assets/downloads/james-dewes-cv.zip">
     <div>
-        <p>
-          CV
-        </p>
+      <p>
+        CV
+      </p>
     </div>
   </a>
   <a class="page-link" href="#" id="goRetro">
