--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,238 +1,1 @@
-@import url(../../node_modules/normalize.css/normalize.css);
-.u-h1 {
-  font-size: 2.611rem;
-  line-height: 1.617rem; }
-
-.u-h2 {
-  font-size: 2.056rem;
-  line-height: 1.649rem; }
-
-.u-h3 {
-  font-size: 1.611rem;
-  line-height: 1.69rem; }
-
-.u-h4 {
-  font-size: 1.278rem;
-  line-height: 1.783rem; }
-
-p, li {
-  font-size: 1rem;
-  line-height: 1.833rem; }
-
-li + li {
-  padding-top: 0.5rem; }
-
-ul {
-  margin: 0;
-  padding: 0; }
-  ul li {
-    list-style: none; }
-
-@font-face {
-  font-family: Roadrage;
-  src: url("/assets/fonts/Roadrage-owgBd.otf"); }
-
-body.eighties {
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  background-color: #2bd1fc;
-  font-size: 25px;
-  margin: 0;
-  font-family: Roadrage, sans-serif; }
-  body.eighties div {
-    padding: 5px; }
-  body.eighties .first {
-    width: 50%;
-    height: 50%;
-    background-color: #f3ea5f;
-    transform: skew(-3deg, -3deg);
-    margin: 4rem auto; }
-  body.eighties .second {
-    background-color: #2bd1fc;
-    transform: skew(-1deg, -1deg); }
-  body.eighties .third {
-    background-color: #ff48c4;
-    transform: skew(-2deg, -2deg); }
-  body.eighties header {
-    text-align: center; }
-  body.eighties header p {
-    font-size: 1.5rem;
-    line-height: 1.6rem; }
-  body.eighties .u-h1 {
-    text-align: center;
-    font-size: 2rem; }
-  body.eighties nav {
-    width: 85%;
-    margin-left: -10px; }
-    body.eighties nav p {
-      color: black; }
-    body.eighties nav div {
-      text-align: center;
-      background-color: #ff48c4;
-      padding: 0.5rem 2rem;
-      margin: 0;
-      transform: skew(-4deg, -4deg);
-      margin-bottom: 2rem; }
-      body.eighties nav div:hover {
-        background-color: #f3ea5f; }
-  body.eighties article {
-    max-width: 80%;
-    margin: 0 auto;
-    transform: skew(-2deg, -2deg);
-    padding: 1rem;
-    background-color: #f3ea5f; }
-  body.eighties footer {
-    width: 80%;
-    margin-top: 10px;
-    background-color: #ff48c4;
-    transform: skew(-2deg, -2deg); }
-    body.eighties footer .social-media-list .svg-icon {
-      width: 1rem;
-      height: 1rem;
-      display: inline-block;
-      padding-right: 0.5ch;
-      vertical-align: text-top; }
-    body.eighties footer .footer-col-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row; }
-  @media screen and (min-width: 426px) {
-    body.eighties nav {
-      width: 15%;
-      position: absolute; }
-    body.eighties nav div {
-      text-align: right; }
-    body.eighties article {
-      max-width: 100%;
-      min-width: 60%;
-      margin: 0 20%;
-      transform: skew(-4deg, -4deg); }
-    body.eighties footer .footer-col-1 {
-      width: calc(20%); }
-    body.eighties footer .footer-col-2 {
-      width: calc(80%); } }
-
-@font-face {
-  font-family: VT323;
-  src: url("/assets/fonts/VT323-Regular.ttf"); }
-
-body.terminal {
-  background-color: black;
-  font-size: 25px;
-  margin: 0;
-  color: #4bde00;
-  font-family: Courier, monospace;
-  margin-left: calc(10%); }
-  body.terminal .u-h1, body.terminal .u-h2, body.terminal .u-h3 {
-    font-family: VT323, Courier, monospace; }
-  body.terminal header {
-    margin: 0 auto; }
-    body.terminal header .u-h1 {
-      white-space: pre; }
-  body.terminal .hidden {
-    display: none; }
-  body.terminal .site-header .u-h1 {
-    line-height: 2.5rem; }
-    body.terminal .site-header .u-h1::before {
-      content: 'whoami\A'; }
-  body.terminal a {
-    display: inline;
-    border: solid 2px  #4bde00;
-    padding: 0.25rem;
-    color: #4bde00;
-    fill: #4bde00;
-    text-decoration: none;
-    font-weight: 700; }
-    body.terminal a:hover {
-      background-color: #4bde00;
-      color: black; }
-      body.terminal a:hover svg {
-        fill: black; }
-  body.terminal ul {
-    margin: 0;
-    padding: 0; }
-    body.terminal ul li {
-      list-style: none; }
-  body.terminal nav {
-    width: calc(90% - 14px);
-    margin-bottom: 1rem;
-    padding: 1rem 0;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; }
-    body.terminal nav a {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      display: none;
-      visibility: hidden; }
-      body.terminal nav a.active, body.terminal nav a:first-of-type {
-        display: inline-block;
-        visibility: visible; }
-    body.terminal nav p {
-      margin: 0; }
-  body.terminal main {
-    max-width: calc(90% - 14px); }
-    body.terminal main nav {
-      width: 100%; }
-      body.terminal main nav a {
-        width: 100%;
-        padding: 0.5rem;
-        margin: 0.5rem 0;
-        display: block;
-        visibility: visible; }
-  body.terminal .post-link {
-    padding-left: 1ch; }
-  body.terminal footer {
-    border-top: dashed 2px #4bde00;
-    width: calc(90% - 14px);
-    margin-top: 10px; }
-    body.terminal footer .social-media-list .svg-icon {
-      width: 1rem;
-      height: 1rem;
-      display: inline-block;
-      padding-right: 0.5ch;
-      vertical-align: text-top; }
-    body.terminal footer .footer-col-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row; }
-  @media screen and (min-width: 426px) {
-    body.terminal main {
-      overflow-y: scroll;
-      padding-right: 1rem;
-      width: calc(90% - 14px);
-      height: calc(100vh - 330px); }
-      body.terminal main::-webkit-scrollbar {
-        -webkit-appearance: none;
-        width: 1rem; }
-      body.terminal main::-webkit-scrollbar-thumb {
-        background-color: #4bde00; }
-    body.terminal footer .footer-col-1 {
-      width: calc(20%); }
-    body.terminal footer .footer-col-2 {
-      width: calc(80%); } }
-  @media screen and (min-width: 600px) {
-    body.terminal nav {
-      width: calc(90% - 14px);
-      border-bottom: dashed 2px #4bde00;
-      margin-bottom: 1rem;
-      padding: 1rem 0;
-      text-align: left; }
-      body.terminal nav p {
-        display: inline;
-        margin: 0;
-        padding: 0rem;
-        margin: 0rem; }
-      body.terminal nav a {
-        text-align: center;
-        display: inline-block;
-        visibility: visible;
-        width: 13%;
-        padding: 0.5rem;
-        margin: 0.5rem; }
-      body.terminal nav a:first-of-type {
-        display: none;
-        visibility: hidden; } }
+@import"../../node_modules/normalize.css/normalize.css";.u-h1{font-size:2.611rem;line-height:1.617rem}.u-h2{font-size:2.056rem;line-height:1.649rem}.u-h3{font-size:1.611rem;line-height:1.69rem}.u-h4{font-size:1.278rem;line-height:1.783rem}p,li{font-size:1rem;line-height:1.833rem}li+li{padding-top:.5rem}ul{margin:0;padding:0}ul li{list-style:none}@font-face{font-family:Roadrage;src:url("/assets/fonts/Roadrage-owgBd.otf")}body.eighties{background-repeat:no-repeat;background-position:top;background-size:cover;background-color:#2bd1fc;font-size:25px;margin:0;font-family:Roadrage,sans-serif}body.eighties div{padding:5px}body.eighties .first{width:50%;height:50%;background-color:#f3ea5f;transform:skew(-3deg, -3deg);margin:4rem auto}body.eighties .second{background-color:#2bd1fc;transform:skew(-1deg, -1deg)}body.eighties .third{background-color:#ff48c4;transform:skew(-2deg, -2deg)}body.eighties header{text-align:center}body.eighties header p{font-size:1.5rem;line-height:1.6rem}body.eighties .u-h1{text-align:center;font-size:2rem}body.eighties nav{width:85%;margin-left:-10px}body.eighties nav p{color:#000}body.eighties nav div{text-align:center;background-color:#ff48c4;padding:.5rem 2rem;margin:0;transform:skew(-4deg, -4deg);margin-bottom:2rem}body.eighties nav div:hover{background-color:#f3ea5f}body.eighties article{max-width:80%;margin:0 auto;transform:skew(-2deg, -2deg);padding:1rem;background-color:#f3ea5f}body.eighties footer{width:80%;margin-top:10px;background-color:#ff48c4;transform:skew(-2deg, -2deg)}body.eighties footer .social-media-list .svg-icon{width:1rem;height:1rem;display:inline-block;padding-right:.5ch;vertical-align:text-top}body.eighties footer .footer-col-wrapper{display:flex;flex-wrap:wrap;flex-direction:row}@media screen and (min-width: 426px){body.eighties nav{width:15%;position:absolute}body.eighties nav div{text-align:right}body.eighties article{max-width:100%;min-width:60%;margin:0 20%;transform:skew(-4deg, -4deg)}body.eighties footer .footer-col-1{width:-webkit-calc(20%);width:20%}body.eighties footer .footer-col-2{width:-webkit-calc(80%);width:80%}}@font-face{font-family:VT323;src:url("/assets/fonts/VT323-Regular.ttf")}body.terminal{background-color:#000;font-size:25px;margin:0;color:#4bde00;font-family:Courier,monospace;margin-left:10%}body.terminal .u-h1,body.terminal .u-h2,body.terminal .u-h3{font-family:VT323,Courier,monospace}body.terminal header{margin:0 auto}body.terminal header .u-h1{white-space:pre}body.terminal .hidden{display:none}body.terminal .site-header .u-h1{line-height:2.5rem}body.terminal .site-header .u-h1::before{content:"whoami\a"}body.terminal a{display:inline;border:solid 2px #4bde00;padding:.25rem;color:#4bde00;fill:#4bde00;text-decoration:none;font-weight:700}body.terminal a:hover{background-color:#4bde00;color:#000}body.terminal a:hover svg{fill:#000}body.terminal ul{margin:0;padding:0}body.terminal ul li{list-style:none}body.terminal nav{width:calc(90% - 14px);margin-bottom:1rem;padding:1rem 0;text-align:center;display:flex;flex-direction:row;flex-wrap:wrap}body.terminal nav a{width:100%;padding:.5rem;margin:.5rem 0;display:none;visibility:hidden}body.terminal nav a.active,body.terminal nav a:first-of-type{display:inline-block;visibility:visible}body.terminal nav p{margin:0}body.terminal main{max-width:calc(90% - 14px)}body.terminal main nav{width:100%}body.terminal main nav a{width:100%;padding:.5rem;margin:.5rem 0;display:block;visibility:visible}body.terminal .post-link{padding-left:1ch}body.terminal footer{border-top:dashed 2px #4bde00;width:calc(90% - 14px);margin-top:10px}body.terminal footer .social-media-list .svg-icon{width:1rem;height:1rem;display:inline-block;padding-right:.5ch;vertical-align:text-top}body.terminal footer .footer-col-wrapper{display:flex;flex-wrap:wrap;flex-direction:row}@media screen and (min-width: 426px){body.terminal main{overflow-y:scroll;padding-right:1rem;width:calc(90% - 14px);height:calc(100vh - 330px)}body.terminal main::-webkit-scrollbar{-webkit-appearance:none;width:1rem}body.terminal main::-webkit-scrollbar-thumb{background-color:#4bde00}body.terminal footer .footer-col-1{width:-webkit-calc(20%);width:20%}body.terminal footer .footer-col-2{width:-webkit-calc(80%);width:80%}}@media screen and (min-width: 600px){body.terminal nav{width:calc(90% - 14px);border-bottom:dashed 2px #4bde00;margin-bottom:1rem;padding:1rem 0;text-align:left}body.terminal nav p{display:inline;margin:0;padding:0rem;margin:0rem}body.terminal nav a{text-align:center;display:inline-block;visibility:visible;width:13%;padding:.5rem;margin:.5rem}body.terminal nav a:first-of-type{display:none;visibility:hidden}}
