--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav>
-  <a class="page-link hidden-desktop" id="navigation" href="#">
-    <div>
-      <p>
-        Navigation
-      </p>
+  <a class="page-link hamburger-menu" id="navigation" href="#" aria-label="Toggle navigation menu">
+    <div class="hamburger-icon">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
   </a>
 
