--- a/_assets/styles/libs/terminal.scss
+++ b/_assets/styles/libs/terminal.scss
@@ -2,7 +2,8 @@
     font-family: VT323;
     src: url("/assets/fonts/VT323-Regular.ttf");
 }
-body.terminal{
+
+body.terminal {
     $width: calc(90% - 14px);
     background-color: black;
     font-size: 25px;
@@ -11,50 +12,62 @@ body.terminal{
     font-family: Courier, monospace;
     margin-left: calc(10%);
 
-    .u-h1, .u-h2, .u-h3{
+    .u-h1,
+    .u-h2,
+    .u-h3 {
         font-family: VT323, Courier, monospace;
     }
-    header{
+
+    header {
         margin: 0 auto;
-        .u-h1{
-            white-space:pre;
+        position: relative;
+
+        .u-h1 {
+            white-space: pre;
         }
     }
-    .hidden{
-        display: none;
-    } 
 
-    .site-header .u-h1{
+    .hidden {
+        display: none;
+    }
+
+    .site-header .u-h1 {
         line-height: 2.5rem;
-        &::before{
+
+        &::before {
             content: 'whoami\A'
         }
     }
-    a{
+
+    a {
         display: inline;
-        border: solid 2px  #4bde00;
+        border: solid 2px #4bde00;
         padding: 0.25rem;
         color: #4bde00;
         fill: #4bde00;
         text-decoration: none;
         font-weight: 700;
-        &:hover{
+
+        &:hover {
             background-color: #4bde00;
             color: black;
-            svg{
+
+            svg {
                 fill: black;
             }
         }
     }
-    ul{
+
+    ul {
         margin: 0;
         padding: 0;
-        li{
+
+        li {
             list-style: none;
         }
     }
-    
-    nav{
+
+    nav {
         width: $width;
         margin-bottom: 1rem;
         padding: 1rem 0;
@@ -62,44 +75,91 @@ body.terminal{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        a{
+        position: relative;
+
+        // Hamburger menu button - positioned above header
+        .hamburger-menu {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            display: inline-block;
+            width: auto;
+            padding: 0.5rem;
+            margin: 0;
+            background: transparent;
+            border: solid 2px #4bde00;
+            cursor: pointer;
+            z-index: 100;
+
+            .hamburger-icon {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                width: 24px;
+                height: 18px;
+
+                span {
+                    display: block;
+                    height: 2px;
+                    width: 100%;
+                    background-color: #4bde00;
+                    transition: all 0.3s ease;
+                }
+            }
+
+            &:hover {
+                background-color: #4bde00;
+
+                .hamburger-icon span {
+                    background-color: black;
+                }
+            }
+        }
+
+        // Navigation links - hidden on mobile by default
+        a:not(.hamburger-menu) {
             width: 100%;
             padding: 0.5rem;
             margin: 0.5rem 0;
-            display:none;
+            display: none;
             visibility: hidden;
-            &.active, 
-            &:first-of-type{
-                display:inline-block;
+
+            &.active {
+                display: inline-block;
                 visibility: visible;
             }
         }
-        p{
+
+        p {
             margin: 0;
         }
     }
-    
-    main{
+
+    main {
         max-width: $width;
-        nav{
+
+        nav {
             width: 100%;
-            a{
+
+            a {
                 width: 100%;
                 padding: 0.5rem;
                 margin: 0.5rem 0;
-                display:block;
+                display: block;
                 visibility: visible;
             }
         }
-    }        
-    .post-link{
+    }
+
+    .post-link {
         padding-left: 1ch;
     }
-    
-    footer{
+
+    footer {
         border-top: dashed 2px #4bde00;
         width: $width;
         margin-top: 10px;
+
         .social-media-list {
             .svg-icon {
                 width: 1rem;
@@ -109,53 +169,67 @@ body.terminal{
                 vertical-align: text-top;
             }
         }
-        .footer-col-wrapper{
+
+        .footer-col-wrapper {
             display: flex;
             flex-wrap: wrap;
             flex-direction: row;
         }
 
     }
-    @media screen and (min-width:426px){
-        main{
+
+    @media screen and (min-width:426px) {
+        main {
             overflow-y: scroll;
             padding-right: 1rem;
             width: $width;
             height: calc(100vh - 330px);
+
             &::-webkit-scrollbar {
                 -webkit-appearance: none;
                 width: 1rem;
             }
+
             &::-webkit-scrollbar-thumb {
-                background-color:  #4bde00;            
+                background-color: #4bde00;
             }
         }
-        footer{
+
+        footer {
             .footer-col-1 {
                 width: -webkit-calc(20%);
-                width:         calc(20%);
+                width: calc(20%);
             }
-            
+
             .footer-col-2 {
                 width: -webkit-calc(80%);
-                width:         calc(80%);
+                width: calc(80%);
             }
         }
     }
-    @media screen and (min-width:600px){
-        nav{
+
+    @media screen and (min-width:600px) {
+        nav {
             width: $width;
             border-bottom: dashed 2px #4bde00;
             margin-bottom: 1rem;
             padding: 1rem 0;
             text-align: left;
-            p{
+
+            p {
                 display: inline;
                 margin: 0;
                 padding: 0rem;
                 margin: 0rem;
             }
-            a{
+
+            // Hide hamburger on desktop
+            .hamburger-menu {
+                display: none;
+            }
+
+            // Show all nav links on desktop
+            a:not(.hamburger-menu) {
                 text-align: center;
                 display: inline-block;
                 visibility: visible;
@@ -163,12 +237,6 @@ body.terminal{
                 padding: 0.5rem;
                 margin: 0.5rem;
             }
-            a:first-of-type{
-                display: none;
-                visibility: hidden;
-            }
-            
         }
-
     }
 }
