Improve the homepage and header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,14 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <div class="first">
       <div class="second">
-          <div class="third">
-                  <h1 class="u-h1"><a href="/">James Dewes</a></h1>
-                  <p class="u-h3">Data Engineer / Full Stack Developer</p>
-          </div>
+        <div class="third">
+          <h1 class="u-h1"><a href="/">James Dewes</a></h1>
+          <p class="u-h3">Data Engineer & Full Stack Developer | Building Automated Solutions</p>
+        </div>
       </div>
     </div>
     {%- if page_paths -%}
-      {% include nav.html %}
+    {% include nav.html %}
     {%- endif -%}
   </div>
 </header>
