Adds a categories page
Adds a categories page allows navigation of blog by tags. Adds excerpts of the blog to the homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,9 @@ layout: default
         </a>
       </h3>
       {%- if site.show_excerpts -%}
-      {{ post.excerpt }}
+      <div class="post-excerpt">
+        {{ post.excerpt | default: post.content | strip_html | truncatewords: 30 }}
+      </div>
       {%- endif -%}
     </li>
     {% endunless %}
