--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,12 +12,74 @@ layout: default
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+      {%- endif -%}
+      {%- if page.tags.size > 0 -%}
+        • <span class="post-tags">
+          {%- for tag in page.tags -%}
+            <a href="{{ '/blog/#tag-' | append: tag | downcase | relative_url }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+          {%- endfor -%}
+        </span>
+      {%- endif -%}
+      {%- if page.categories.size > 0 -%}
+        • <span class="post-categories">
+          {%- for category in page.categories -%}
+            <a href="{{ '/blog/#category-' | append: category | downcase | relative_url }}">{{ category }}</a>{% unless forloop.last %}, {% endunless %}
+          {%- endfor -%}
+        </span>
+      {%- endif -%}
+      {%- assign words = page.content | number_of_words -%}
+      {%- if words > 0 -%}
+        • <span class="reading-time">{{ words | divided_by: 200 | plus: 1 }} min read</span>
+      {%- endif -%}
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
+
+  {%- if page.tags.size > 0 or page.categories.size > 0 -%}
+  <footer class="post-footer">
+    {%- if page.tags.size > 0 -%}
+    <div class="post-tags-footer">
+      <strong>Tags:</strong>
+      {%- for tag in page.tags -%}
+        <a href="{{ '/blog/#tag-' | append: tag | downcase | relative_url }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+      {%- endfor -%}
+    </div>
+    {%- endif -%}
+    {%- if page.categories.size > 0 -%}
+    <div class="post-categories-footer">
+      <strong>Categories:</strong>
+      {%- for category in page.categories -%}
+        <a href="{{ '/blog/#category-' | append: category | downcase | relative_url }}">{{ category }}</a>{% unless forloop.last %}, {% endunless %}
+      {%- endfor -%}
+    </div>
+    {%- endif -%}
+  </footer>
+  {%- endif -%}
+
+  {%- comment -%} Related Posts {%- endcomment -%}
+  {%- if page.categories.size > 0 -%}
+    {%- assign related_posts = site.posts | where_exp: "post", "post.url != page.url" | where_exp: "post", "post.categories contains page.categories.first" | limit: 3 -%}
+  {%- elsif page.tags.size > 0 -%}
+    {%- assign related_posts = site.posts | where_exp: "post", "post.url != page.url" | where_exp: "post", "post.tags contains page.tags.first" | limit: 3 -%}
+  {%- else -%}
+    {%- assign related_posts = site.posts | where_exp: "post", "post.url != page.url" | limit: 3 -%}
+  {%- endif -%}
+  {%- if related_posts.size > 0 -%}
+  <aside class="related-posts">
+    <h2 class="u-h2">Related Posts</h2>
+    <ul>
+      {%- for post in related_posts -%}
+      <li>
+        <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>
+      </li>
+      {%- endfor -%}
+    </ul>
+  </aside>
+  {%- endif -%}
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
