--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
 
   {%- for path in page_paths -%}
   {%- assign my_page = site.pages | where: "path", path | first -%}
-  {%- if my_page.title and my_page.title != "Tags" -%}
+  {%- if my_page.title and my_page.title not in "Tags", "Categories" -%}
   <a class="page-link" href="{{ my_page.url | relative_url }}">
     <div>
       <p>
