--- a/_assets/styles/libs/eighties.scss
+++ b/_assets/styles/libs/eighties.scss
@@ -127,6 +127,65 @@ body.eighties {
         padding: 1rem;
         background-color: #f3ea5f;
         font-family: "Comic Sans MS", "Comic Sans", cursive;
+
+        // Blog page navigation (nav inside article)
+        nav {
+            width: 100%;
+            margin-left: 0;
+            position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin-bottom: 1.5rem;
+
+            a {
+                display: inline-block;
+                visibility: visible;
+                padding: 0.5rem 1rem;
+                background-color: #2bd1fc;
+                color: black;
+                text-decoration: none;
+                transform: skew(-2deg, -2deg);
+                margin: 0.25rem;
+                font-family: Roadrage, sans-serif;
+                font-size: 1rem;
+
+                &:hover {
+                    background-color: #ff48c4;
+                }
+            }
+        }
+
+        // Archive list styles
+        .archive-list {
+            list-style: none;
+            padding: 0;
+            margin: 1rem 0;
+
+            li {
+                margin: 0.75rem 0;
+                padding: 0.5rem;
+                background-color: #2bd1fc;
+                transform: skew(-1deg, -1deg);
+
+                a {
+                    color: black;
+                    text-decoration: none;
+                    display: block;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+
+                time {
+                    display: block;
+                    font-size: 0.85rem;
+                    margin-top: 0.25rem;
+                    opacity: 0.8;
+                }
+            }
+        }
     }
 
     footer {
@@ -177,6 +236,14 @@ body.eighties {
             max-width: 100%;
             min-width: 60%;
             margin: 0 20%;
+
+            // Ensure blog nav links remain visible on larger screens
+            nav {
+                a {
+                    display: inline-block;
+                    visibility: visible;
+                }
+            }
         }
 
         footer {
